# BGP-Hijacking-detection

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/checkpoints/: best_model.pt
notebooks/: Avance1.52Equipo.ipynb  Avance2.52Equipo.ipynb  Avance3.52Equipo.ipynb  Avance3.52Equipo_CAOL.ipynb  Avance4.52Equipo.ipynb  Avance5.52Equipo.ipynb  EDA_China_Telecom_cramaya_v2.ipynb  EDA_Chris.ipynb  test_pybgpstream.ipynb
