[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bgp_hijacking"
version = "0.0.1"
description = "BGP Hijacking detection"
authors = [
  { name = "Equipo 52" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["bgp_hijacking"]
include = ["pyproject.toml", "bgp_hijacking/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bgp_hijacking"]
force-sort-within-sections = true

